Refactor: Cleanup search fragments